<resources>
    <string name="app_name">SCMP Jarvis</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SCMP Jarvis</string>
    <string name="nav_header_subtitle">alan.yeung@scmp.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="turn_on_ads_settings">Enable ads</string>
    <string name="turn_off_ads_settings">Disable ads</string>

    <string name="menu_home">Home</string>

    <string name="menu_hong_kong">Hong Kong</string>
    <string name="menu_china">China</string>
    <string name="menu_asia">Asia</string>
    <string name="menu_world">World</string>
    <string name="menu_business">Business</string>
    <string name="menu_economy">Economy</string>
    <string name="menu_tech">Tech</string>

    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
