<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_hong_kong"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_hong_kong" />
        <item
            android:id="@+id/nav_china"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_china" />
        <item
            android:id="@+id/nav_asia"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_asia" />
        <item
            android:id="@+id/nav_world"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_world" />
        <item
            android:id="@+id/nav_business"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_business" />
        <item
            android:id="@+id/nav_economy"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_economy" />
        <item
            android:id="@+id/nav_tech"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_tech" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
