<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_hong_kong"
        android:name="com.example.myapplication.ui.hongkong.HongKongFragment"
        android:label="@string/menu_hong_kong"
        tools:layout="@layout/fragment_hong_kong">
        <argument
            android:name="news"
            android:defaultValue="pi"
            />
    </fragment>

    <fragment
        android:id="@+id/nav_china"
        android:name="com.example.myapplication.ui.china.ChinaFragment"
        android:label="@string/menu_china"
        tools:layout="@layout/fragment_china" />

    <fragment
        android:id="@+id/nav_asia"
        android:name="com.example.myapplication.ui.asia.AsiaFragment"
        android:label="@string/menu_asia"
        tools:layout="@layout/fragment_asia" />

    <fragment
        android:id="@+id/nav_world"
        android:name="com.example.myapplication.ui.world.WorldFragment"
        android:label="@string/menu_world"
        tools:layout="@layout/fragment_world" />

    <fragment
        android:id="@+id/nav_business"
        android:name="com.example.myapplication.ui.business.BusinessFragment"
        android:label="@string/menu_business"
        tools:layout="@layout/fragment_business" />

    <fragment
        android:id="@+id/nav_economy"
        android:name="com.example.myapplication.ui.economy.EconomyFragment"
        android:label="@string/menu_economy"
        tools:layout="@layout/fragment_economy" />

    <fragment
        android:id="@+id/nav_tech"
        android:name="com.example.myapplication.ui.tech.TechFragment"
        android:label="@string/menu_tech"
        tools:layout="@layout/fragment_tech" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.myapplication.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.myapplication.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.myapplication.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>