<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/turn_on_ads_settings"
        android:orderInCategory="100"
        android:title="@string/turn_on_ads_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/turn_off_ads_settings"
        android:orderInCategory="100"
        android:title="@string/turn_off_ads_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/demo_ads"
        android:orderInCategory="100"
        android:title="@string/demo_ads"
        app:showAsAction="never" />
</menu>
